cluster_config/conifg/wordladder/wordladder-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serverb
  labels:
    app: serverb
    service: serverb
spec:
  ports:
  - port: 8964
    name: http
  selector:
    app: serverb
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: serverb-v1
  labels:
    app: serverb
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: serverb
        version: v1
    spec:
      containers:
      - name: serverb
        image: wangtianxia/spring-boot-word-ladder:v1
        imagePullPolicy: IfNotPresent
        command: ['java','-jar','/home/WordLadder-0.0.1-SNAPSHOT.jar']
        ports:
        - containerPort: 8964
        resources:
          limits:
            memory: "2048Mi"
            cpu: "2"
          requests:
            cpu: "2"
            memory: "2048Mi"
