cluster_config/conifg/wordladder/wordladder-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: serverb-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: serverb
spec:
  hosts:
  - "*"
  gateways:
  - serverb-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: serverb
        port:
          number: 8964
