cluster_config/conifg/wordladder/wordladder-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: serverb
spec:
  host: serverb
  subsets:
  - name: v1
    labels:
      version: v1
