cluster_config/conifg/wordladder/wordladder-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: serverb
spec:
  hosts:
  - serverb
  http:
  - route:
    - destination:
        host: serverb
        subset: v1
---
